Web + Config working

--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -1,5 +1,8 @@
 elements {
     input {
-        search = "foo"
+        search {
+            by = "css",
+            selector = "*[name='q']"
+        }
     }
 }
